--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,7 @@ button {
 }
 /* #region header */
 .main-header {
+  border-bottom: 1px solid #e7e9fc;
 }
 .main-header .container {
   display: flex;
@@ -197,6 +198,8 @@ button {
   padding: 16px 32px;
   border-radius: 4px;
   min-width: 169px; /* min-width чтобы влезло 2 слова*/
+  height: 56px;
+  border: none;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -220,6 +223,7 @@ button {
 /* #region Our Team */
 .team {
   background-color: #f4f4fd;
+  padding: 120px 0;
 }
 .team.container {
   padding-top: 120px;
@@ -231,6 +235,7 @@ button {
 .team-list .item {
   background-color: #ffffff;
   text-align: center;
+  border-radius: 0px 0px 4px 4px;
 }
 .section-list .card-text {
   padding: 32px 0;
@@ -253,7 +258,9 @@ button {
   border-top: none;
 }
 .portfolio.section {
-  padding-bottom: 130px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+  /* padding-bottom: 130px; */
 }
 /* #endregion Our Portfolio */
 
